@@ -4,38 +4,21 @@
  *
  *  Copyright (C) 2000 Eazel, Inc.
  *                2000 SuSE GmbH.
- *
- *  This library is free software; you can redistribute it and/or
- *  modify it under the terms of the GNU Lesser General Public
- *  License as published by the Free Software Foundation; either
- *  version 2 of the License, or (at your option) any later version.
- *
- *  This library is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- *  Lesser General Public License for more details.
- *
- *  You should have received a copy of the GNU Lesser General Public
- *  License along with this library; if not, write to the Free
- *  Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- *
+ *                2001 Ximian Inc.
+ * 
  *  Authors: Maciej Stachowiak <mjs@eazel.com>
  *           Martin Baulig <baulig@suse.de>
- *
  */
-
 #include <config.h>
 #include <bonobo/bonobo-exception.h>
 #include <bonobo/bonobo-zoomable-frame.h>
-#include <gtk/gtksignal.h>
 
 #undef ZOOMABLE_DEBUG
 
-static BonoboObjectClass   *bonobo_zoomable_frame_parent_class;
-static BonoboZoomableFrameClass *bonobo_zoomable_frame_class;
+static GObjectClass *parent_class = NULL;
 
 struct _BonoboZoomableFramePrivate {
-	Bonobo_Zoomable			 zoomable;
+	Bonobo_Zoomable zoomable;
 };
 
 enum {
@@ -44,106 +27,87 @@ enum {
 	LAST_SIGNAL
 };
 
-static guint signals[LAST_SIGNAL];
+static guint signals [LAST_SIGNAL];
 
 static inline BonoboZoomableFrame *
-bonobo_zoomable_frame_from_servant (PortableServer_Servant servant)
+frame_from_servant (PortableServer_Servant servant)
 {
-	if (!BONOBO_IS_ZOOMABLE_FRAME (bonobo_object_from_servant (servant)))
-		return NULL;
-	else
-		return BONOBO_ZOOMABLE_FRAME (bonobo_object_from_servant (servant));
+	return BONOBO_ZOOMABLE_FRAME (bonobo_object_from_servant (servant));
 }
 
 static void 
 impl_Bonobo_ZoomableFrame_onLevelChanged (PortableServer_Servant  servant,
-						     const CORBA_float      zoom_level,
-						     CORBA_Environment      *ev)
+					  const CORBA_float      zoom_level,
+					  CORBA_Environment      *ev)
 {
-	BonoboZoomableFrame *zoomable_frame;
+	BonoboZoomableFrame *frame = frame_from_servant (servant);
 
-	zoomable_frame = bonobo_zoomable_frame_from_servant (servant);
-	gtk_signal_emit (GTK_OBJECT (zoomable_frame), signals[ZOOM_LEVEL_CHANGED],
-			 zoom_level);
+	g_signal_emit (G_OBJECT (frame), signals [ZOOM_LEVEL_CHANGED], 0,
+		       zoom_level);
 }
 
 static void 
 impl_Bonobo_ZoomableFrame_onParametersChanged (PortableServer_Servant  servant,
 							  CORBA_Environment      *ev)
 {
-	BonoboZoomableFrame *zoomable_frame;
+	BonoboZoomableFrame *frame = frame_from_servant (servant);
 
-	zoomable_frame = bonobo_zoomable_frame_from_servant (servant);
-	gtk_signal_emit (GTK_OBJECT (zoomable_frame), signals[ZOOM_PARAMETERS_CHANGED]);
+	g_signal_emit (G_OBJECT (frame), signals [ZOOM_PARAMETERS_CHANGED], 0);
 }
 
-
 static void
-bonobo_zoomable_frame_destroy (GtkObject *object)
+bonobo_zoomable_frame_dispose (GObject *object)
 {
-	BonoboZoomableFrame *zoomable_frame;
+	BonoboZoomableFrame *frame = (BonoboZoomableFrame *) object;
 
-	g_return_if_fail (object != NULL);
-	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (object));
+	frame->priv->zoomable = bonobo_object_release_unref (
+		frame->priv->zoomable, NULL);
 
-	zoomable_frame = BONOBO_ZOOMABLE_FRAME (object);
-
-	if (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL)
-		bonobo_object_release_unref (zoomable_frame->priv->zoomable, NULL);
-	zoomable_frame->priv->zoomable = CORBA_OBJECT_NIL;
-
-	GTK_OBJECT_CLASS (bonobo_zoomable_frame_parent_class)->destroy (object);
+	parent_class->dispose (object);
 }
 
 static void
 bonobo_zoomable_frame_finalize (GObject *object)
 {
-	BonoboZoomableFrame *zoomable_frame;
+	BonoboZoomableFrame *frame = (BonoboZoomableFrame *) object;
 
-	g_return_if_fail (object != NULL);
-	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (object));
+	g_free (frame->priv);
 
-	zoomable_frame = BONOBO_ZOOMABLE_FRAME (object);
-
-	g_free (zoomable_frame->priv);
-	zoomable_frame->priv = NULL;
-
-	G_OBJECT_CLASS (bonobo_zoomable_frame_parent_class)->finalize (object);
+	parent_class->finalize (object);
 }
 
 static void
 bonobo_zoomable_frame_class_init (BonoboZoomableFrameClass *klass)
 {
+	GObjectClass *object_class;
 	POA_Bonobo_ZoomableFrame__epv *epv = &klass->epv;
-
-	GtkObjectClass *object_class;
-	GObjectClass *gobject_class;
 	
-	object_class = (GtkObjectClass*) klass;
-	gobject_class = (GObjectClass*) klass;
+	object_class = (GObjectClass *) klass;
 	
-	bonobo_zoomable_frame_parent_class = gtk_type_class (bonobo_object_get_type ());
-	bonobo_zoomable_frame_class = klass;
+	parent_class = g_type_class_peek_parent (klass);
 
-	signals[ZOOM_LEVEL_CHANGED] =
-		gtk_signal_new ("zoom_level_changed",
-				GTK_RUN_LAST,
-				GTK_CLASS_TYPE (object_class),
-				GTK_SIGNAL_OFFSET (BonoboZoomableFrameClass, zoom_level_changed),
-				g_cclosure_marshal_VOID__FLOAT,
-				GTK_TYPE_NONE, 1, GTK_TYPE_FLOAT);
-	signals[ZOOM_PARAMETERS_CHANGED] =
-		gtk_signal_new ("zoom_parameters_changed",
-				GTK_RUN_LAST,
-				GTK_CLASS_TYPE (object_class),
-				GTK_SIGNAL_OFFSET (BonoboZoomableFrameClass, zoom_parameters_changed),
-				gtk_marshal_VOID__VOID,
-				GTK_TYPE_NONE, 0);
+	signals [ZOOM_LEVEL_CHANGED] =
+		g_signal_new ("zoom_level_changed",
+			      G_TYPE_FROM_CLASS (klass),
+			      G_SIGNAL_RUN_LAST,
+			      G_STRUCT_OFFSET (BonoboZoomableFrameClass, zoom_level_changed),
+			      NULL, NULL,
+			      g_cclosure_marshal_VOID__FLOAT,
+			      G_TYPE_NONE, 1, G_TYPE_FLOAT);
 
-	object_class->destroy = bonobo_zoomable_frame_destroy;
-	gobject_class->finalize = bonobo_zoomable_frame_finalize;
+	signals [ZOOM_PARAMETERS_CHANGED] =
+		g_signal_new ("zoom_parameters_changed",
+			      G_TYPE_FROM_CLASS (klass),
+			      G_SIGNAL_RUN_LAST,
+			      G_STRUCT_OFFSET (BonoboZoomableFrameClass, zoom_parameters_changed),
+			      NULL, NULL,
+			      g_cclosure_marshal_VOID__VOID,
+			      G_TYPE_NONE, 0);
 
-	epv->onLevelChanged = impl_Bonobo_ZoomableFrame_onLevelChanged;
+	object_class->dispose  = bonobo_zoomable_frame_dispose;
+	object_class->finalize = bonobo_zoomable_frame_finalize;
+
+	epv->onLevelChanged      = impl_Bonobo_ZoomableFrame_onLevelChanged;
 	epv->onParametersChanged = impl_Bonobo_ZoomableFrame_onParametersChanged;
 }
 
@@ -151,7 +115,6 @@ static void
 bonobo_zoomable_frame_init (BonoboZoomableFrame *zoomable)
 {
 	zoomable->priv = g_new0 (BonoboZoomableFramePrivate, 1);
-
 }
 
 BONOBO_TYPE_FUNC_FULL (BonoboZoomableFrame, Bonobo_ZoomableFrame,
@@ -164,17 +127,12 @@ BONOBO_TYPE_FUNC_FULL (BonoboZoomableFrame, Bonobo_ZoomableFrame,
  * Create a new bonobo-zoomable implementing BonoboObject
  * interface.
  * 
- * Return value: 
+ * Return value: the new frame.
  **/
 BonoboZoomableFrame *
 bonobo_zoomable_frame_new (void)
 {
-	BonoboZoomableFrame *p;
-
-	p = gtk_type_new (bonobo_zoomable_frame_get_type ());
-	g_return_val_if_fail (p != NULL, NULL);
-
-	return p;
+	return g_object_new (bonobo_zoomable_frame_get_type (), NULL);
 }
 
 /**
@@ -186,26 +144,33 @@ bonobo_zoomable_frame_new (void)
  * Associates @zoomable with this @zoomable_frame.
  */
 void
-bonobo_zoomable_frame_bind_to_zoomable (BonoboZoomableFrame *zoomable_frame, Bonobo_Zoomable zoomable)
+bonobo_zoomable_frame_bind_to_zoomable (BonoboZoomableFrame *zoomable_frame,
+					Bonobo_Zoomable      zoomable,
+					CORBA_Environment   *opt_ev)
 {
-	CORBA_Environment ev;
+	CORBA_Environment *ev, temp_ev;
 
 	g_return_if_fail (zoomable != CORBA_OBJECT_NIL);
 	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame));
 
-	/* Keep a local handle to the Zoomable. */
 	if (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL)
 		g_warning ("FIXME: leaking zoomable reference");
 
 	zoomable_frame->priv->zoomable = bonobo_object_dup_ref (zoomable, NULL);
 
-	/* Introduce ourselves to the Zoomable. */
-	CORBA_exception_init (&ev);
-	Bonobo_Zoomable_setFrame (zoomable, BONOBO_OBJREF (zoomable_frame),
-				  &ev);
-	if (BONOBO_EX (&ev))
-		bonobo_object_check_env (BONOBO_OBJECT (zoomable_frame), zoomable, &ev);
-	CORBA_exception_free (&ev);
+	if (!opt_ev) {
+		CORBA_exception_init (&temp_ev);
+		ev = &temp_ev;
+	} else
+		ev = opt_ev;
+
+	Bonobo_Zoomable_setFrame (zoomable, BONOBO_OBJREF (zoomable_frame), ev);
+
+	if (BONOBO_EX (ev))
+		bonobo_object_check_env (BONOBO_OBJECT (zoomable_frame), zoomable, ev);
+
+	if (!opt_ev)
+		CORBA_exception_free (&temp_ev);
 }
 
 /**
@@ -220,7 +185,8 @@ bonobo_zoomable_frame_bind_to_zoomable (BonoboZoomableFrame *zoomable_frame, Bon
 Bonobo_Zoomable
 bonobo_zoomable_frame_get_zoomable (BonoboZoomableFrame *zoomable_frame)
 {
-	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), CORBA_OBJECT_NIL);
+	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame),
+			      CORBA_OBJECT_NIL);
 
 	return zoomable_frame->priv->zoomable;
 }
@@ -246,7 +212,6 @@ bonobo_zoomable_frame_zoom_out (BonoboZoomableFrame *zoomable_frame)
 {
 	CORBA_Environment ev;
 
-	g_return_if_fail (zoomable_frame != NULL);
 	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame));
 	g_return_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL);
 
@@ -262,7 +227,6 @@ bonobo_zoomable_frame_zoom_to_fit (BonoboZoomableFrame *zoomable_frame)
 {
 	CORBA_Environment ev;
 
-	g_return_if_fail (zoomable_frame != NULL);
 	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame));
 	g_return_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL);
 
@@ -278,7 +242,6 @@ bonobo_zoomable_frame_zoom_to_default (BonoboZoomableFrame *zoomable_frame)
 {
 	CORBA_Environment ev;
 
-	g_return_if_fail (zoomable_frame != NULL);
 	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame));
 	g_return_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL);
 
@@ -295,7 +258,6 @@ bonobo_zoomable_frame_get_zoom_level (BonoboZoomableFrame *zoomable_frame)
 	CORBA_Environment ev;
 	float retval;
 
-	g_return_val_if_fail (zoomable_frame != NULL, 0.0);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), 0.0);
 	g_return_val_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL, 0.0);
 
@@ -316,7 +278,6 @@ bonobo_zoomable_frame_get_min_zoom_level (BonoboZoomableFrame *zoomable_frame)
 	CORBA_Environment ev;
 	float retval;
 
-	g_return_val_if_fail (zoomable_frame != NULL, 0.0);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), 0.0);
 	g_return_val_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL, 0.0);
 
@@ -337,7 +298,6 @@ bonobo_zoomable_frame_get_max_zoom_level (BonoboZoomableFrame *zoomable_frame)
 	CORBA_Environment ev;
 	float retval;
 
-	g_return_val_if_fail (zoomable_frame != NULL, 0.0);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), 0.0);
 	g_return_val_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL, 0.0);
 
@@ -358,7 +318,6 @@ bonobo_zoomable_frame_has_min_zoom_level (BonoboZoomableFrame *zoomable_frame)
 	CORBA_Environment ev;
 	gboolean retval;
 
-	g_return_val_if_fail (zoomable_frame != NULL, FALSE);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), FALSE);
 	g_return_val_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL, FALSE);
 
@@ -379,7 +338,6 @@ bonobo_zoomable_frame_has_max_zoom_level (BonoboZoomableFrame *zoomable_frame)
 	CORBA_Environment ev;
 	gboolean retval;
 
-	g_return_val_if_fail (zoomable_frame != NULL, FALSE);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), FALSE);
 	g_return_val_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL, FALSE);
 
@@ -400,7 +358,6 @@ bonobo_zoomable_frame_is_continuous (BonoboZoomableFrame *zoomable_frame)
 	CORBA_Environment ev;
 	gboolean retval;
 
-	g_return_val_if_fail (zoomable_frame != NULL, FALSE);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), FALSE);
 	g_return_val_if_fail (zoomable_frame->priv->zoomable != CORBA_OBJECT_NIL, FALSE);
 
@@ -423,7 +380,6 @@ bonobo_zoomable_frame_get_preferred_zoom_levels (BonoboZoomableFrame *zoomable_f
 	GList *list = NULL;
 	int i;
 
-	g_return_val_if_fail (zoomable_frame != NULL, NULL);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), NULL);
 
 	CORBA_exception_init (&ev);
@@ -465,7 +421,6 @@ bonobo_zoomable_frame_get_preferred_zoom_level_names (BonoboZoomableFrame *zooma
 	GList *list = NULL;
 	int i;
 
-	g_return_val_if_fail (zoomable_frame != NULL, NULL);
 	g_return_val_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame), NULL);
 
 	CORBA_exception_init (&ev);
@@ -497,7 +452,6 @@ bonobo_zoomable_frame_set_zoom_level (BonoboZoomableFrame *zoomable_frame, float
 {
 	CORBA_Environment ev;
 
-	g_return_if_fail (zoomable_frame != NULL);
 	g_return_if_fail (BONOBO_IS_ZOOMABLE_FRAME (zoomable_frame));
 
 	CORBA_exception_init (&ev);
